[package]
name = "gossip-glomers-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1"
fs4 = { version = "0.7", features = ["sync"] }
chrono = "0.4.31"
rand = "0.8.5"